test/simple/typeerrors/Examples/QualVarBind.hs
module QualVarBind where

f xs = [ if x then 1 else x | x <- xs ]
